+ fixed mmdnight links + fixed css alignment

--- a/assets/css/config.css
+++ b/assets/css/config.css
@@ -120,6 +120,7 @@ code::selection {
     font-family     : 'PT Mono', monospace;
     padding-left    : 4px;
     padding-right   : 4px;
+    text-align      : center;
 }
 .editor_hotbar input {
     font-family     : 'DM Mono';
